--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -1,6 +1,6 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="loginImage" src="img/choreScoreInitials.png" alt="chores" />
+          <img class="loginImage" src="img/choreScore3.png" alt="chores" />
           <div class="loginContainer">
             <div class="list">
               <label class="registrationPassword item item-input">
@@ -14,6 +14,6 @@
             <!-- <i class="thumb iconSize icon ion-android-hand"></i> -->
             <h2>{{data.loginError}}</h2>
           </div>
-          <a href="/#/registration"><h3 class="loginRegister">First Time? Register Here.</h3></a>
+          <a href="#/registration"><h3 class="loginRegister">First Time? Register Here.</h3></a>
         </ion-content
 </ion-view>
