--- a/www/templates/splash/splash.html
+++ b/www/templates/splash/splash.html
@@ -1,7 +1,7 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <a href="/#/login"><img class="splashImage" src="img/chorescore.png" alt="chores" /></a>
-          <h2 class="splashText">...make happier kids.</h2>
+          <img class="splashImage" src="img/chorescore3.png" alt="chores" />
+          <h2 class="splashText">...mean happier kids.</h2>
           <h2 class="splashText">Where happier parents...</h2>
         </ion-content>
 </ion-view>
