--- a/www/templates/children/childChores.html
+++ b/www/templates/children/childChores.html
@@ -27,7 +27,7 @@
         <div class="bar bar-footer bar-dark footerLogout">
           <button ng-click="data.logout(data.user)" class="choreFooterLogoutButton" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
-          <button footer button button-clear><a href="/#/child/{{data.id}}/rewards">Rewards</a></button>
-          <a href="/#/child/{{data.id}}/rewards"><i class="iconSize icon ion-trophy"></i></a>
+          <button footer button button-clear><a href="#/child/{{data.id}}/rewards">Rewards</a></button>
+          <a href="#/child/{{data.id}}/rewards"><i class="iconSize icon ion-trophy"></i></a>
         </div>
 </ion-view>
