--- a/www/templates/children/childRewards.html
+++ b/www/templates/children/childRewards.html
@@ -15,7 +15,7 @@
         <div class="bar bar-footer bar-dark footerLogout">
           <button class="choreFooterLogoutButton" ng-click="data.logout(data.user)" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
-          <button footer button button-clear><a href="/#/child/{{data.id}}/chores">Chores</a></button>
-          <a href="/#/child/{{data.id}}/chores"><i class="iconSize icon ion-clipboard"></i></a>
+          <button footer button button-clear><a href="#/child/{{data.id}}/chores">Chores</a></button>
+          <a href="#/child/{{data.id}}/chores"><i class="iconSize icon ion-clipboard"></i></a>
         </div>
 </ion-view>
