--- a/www/templates/parents/parentHome.html
+++ b/www/templates/parents/parentHome.html
@@ -1,9 +1,8 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
           <div class="loginContainer">
             <div class="" ng-repeat="name in data.info">
-              <button class="showChildButton"><a href="/#/parent/children/show/{{name.id}}">{{name.name}}</a></button>
+              <button class="showChildButton"><a href="#/parent/children/show/{{name.id}}">{{name.name}}</a></button>
             </div>
             <button class="addChildButton" type="button" name="button" ng-hide="data.showChildRegistration === true" ng-click="data.addChildFromParentHome()"> Add Child </button>
           </div>
