--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -1,7 +1,7 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
-          <div class="loginContainer">
+          <img class="childHomeImage" src="/img/choreScore3.png" alt="" />
+          <div class="childContainer">
             <h1 class="childName">Hi {{data.childName}}</h1>
             <h3 class="childShowInfo">You currently have {{data.childPoints}} points.</h3>
             <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/chores"> Chores</button>
