--- a/www/templates/children/childRewards.html
+++ b/www/templates/children/childRewards.html
@@ -1,7 +1,6 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="loginImage" src="/img/choreScoreInitials.png" alt="" />
-          <h2 class="parentShowTitle">Reward List:</h2>
+          <h2 class="childShowTitle">Reward List:</h2>
             <div class="choreList">
               <ul ng-repeat="reward in data.childRewards">
                 <li>
