fixed mobile buttons

--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -4,8 +4,8 @@
           <div class="childContainer">
             <h1 class="childName">Hi {{data.childName}}</h1>
             <h3 class="childShowInfo">You currently have {{data.childPoints}} points.</h3>
-            <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/chores"> Chores</button>
-            <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/rewards"> Rewards </a></button>
+            <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/chores" target="_self"> Chores</button>
+            <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/rewards" target="_self"> Rewards </a></button>
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
