--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -14,6 +14,6 @@
             <!-- <i class="thumb iconSize icon ion-android-hand"></i> -->
             <h2>{{data.loginError}}</h2>
           </div>
-          <a href="#/registration"><h3 class="loginRegister">First Time? Register Here.</h3></a>
+          <a href="#/registration" target="_self"><h3 class="loginRegister">First Time? Register Here.</h3></a>
         </ion-content
 </ion-view>
