--- a/www/templates/children/childChores.html
+++ b/www/templates/children/childChores.html
@@ -26,7 +26,7 @@
         <div class="bar bar-footer bar-dark footerLogout">
           <button ng-click="data.logout(data.user)" class="choreFooterLogoutButton" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
-          <button footer button button-clear><a href="#/child/{{data.id}}/rewards" target="_self">Rewards</a></button>
+          <button footer button button-clear class="footerReward"><a href="#/child/{{data.id}}/rewards" target="_self">Rewards</a></button>
           <a href="#/child/{{data.id}}/rewards" target="_self"><i class="iconSize icon ion-trophy"></i></a>
         </div>
 </ion-view>
