--- a/www/templates/children/childRewards.html
+++ b/www/templates/children/childRewards.html
@@ -1,20 +1,29 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
           <h2 class="childShowTitle">Reward List:</h2>
-            <div class="choreList">
+            <div class="choreList" ng-show="data.showRewards === true">
               <ul ng-repeat="reward in data.childRewards">
                 <li>
-                  <p><strong>Reward:</strong> {{reward.rewardName}}</p>
-                  <p><strong>Notes:</strong> {{reward.rewardNotes}}</p>
+                  <p ng-click="data.goRewardPurchase(reward)"><strong>Reward:</strong> {{reward.rewardName}}</p>
+                  <p ng-click="data.goRewardPurchase(reward)"><strong>Cost:</strong> {{reward.rewardPoints}} points</p>
+                  <p ng-click="data.goRewardPurchase(reward)"><strong>Status:</strong> {{reward.status}}</p>
+                  <p ng-click="data.goRewardPurchase(reward)"><strong>Notes:</strong> {{reward.rewardNotes}}</p>
                   <hr>
                 </li>
               </ul>
+            </div>
+            <div class="" ng-show="data.purchaseReward === true">
+              <h3 class="submitChorePage">Chore to Purchase: {{data.rewardInfo.rewardName}}</h3>
+              <h3 class="submitChorePage">Point Cost: {{data.rewardInfo.rewardPoints}}</h3>
+              <div class="list">
+                <button class="submitCompletedChoreButton" type="button" name="button" ng-click="data.submitPurchaseReward(data.rewardInfo)">Purchase Reward</button>
+              </div>
             </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
           <button class="choreFooterLogoutButton" ng-click="data.logout(data.user)" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
-          <button footer button button-clear><a href="#/child/{{data.id}}/chores">Chores</a></button>
+          <button footer button button-clear class="footerReward"><a href="#/child/{{data.id}}/chores" target="_self">Chores</a></button>
           <a href="#/child/{{data.id}}/chores" target="_self"><i class="iconSize icon ion-clipboard"></i></a>
         </div>
 </ion-view>
