parent show child page is dynamic

--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -1,6 +1,6 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="childHomeImage" src="/img/choreScore3.png" alt="" />
+          <img class="childHomeImage" src="img/choreScore3.png" alt="chores"/>
           <div class="childContainer">
             <h1 class="childName">Hi {{data.childName}}</h1>
             <h3 class="childShowInfo">You currently have {{data.childPoints}} points.</h3>
