--- a/www/templates/splash/splash.html
+++ b/www/templates/splash/splash.html
@@ -1,6 +1,6 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <img class="splashImage" src="img/chorescore3.png" alt="chores" />
+          <img class="splashImage" src="img/choreScore3.png" alt="chores"/>
           <h2 class="splashText">...mean happier kids.</h2>
           <h2 class="splashText">Where happier parents...</h2>
         </ion-content>
