--- a/www/css/style.css
+++ b/www/css/style.css
@@ -155,6 +155,13 @@ a{
 li:focus{
   color: red;
 }
+.backChildrenShowButton{
+  width: 99px;
+  margin-bottom: 3%;
+  font-size: 20px;
+  border-radius: 55px;
+  background-color: gray;
+}
 .submitEditedChoreButton{
   background-color: gray;
   color: black;
