--- a/www/templates/children/childHome.html
+++ b/www/templates/children/childHome.html
@@ -6,6 +6,7 @@
             <h3 class="childShowInfo">You currently have {{data.childPoints}} points.</h3>
             <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/chores" target="_self"> Chores</button>
             <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/rewards" target="_self"> Rewards </a></button>
+            <button class="loginButton" type="button" name="button"><a href="#/child/{{data.id}}/bank" target="_self"><i class="iconSize icon ion-social-usd-outline"></i> Bank <i class="iconSize icon ion-social-usd-outline"></i></a></button>
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
