--- a/www/templates/children/childChores.html
+++ b/www/templates/children/childChores.html
@@ -3,7 +3,7 @@
           <h2 class="childShowTitle" ng-show="data.showChoreListTitle === true">Chore List:</h2>
           <div class="choreList" ng-show="data.showChoreList === true">
             <ul ng-repeat="chore in data.childChores">
-              <li>
+              <li class="listItem">
                 <p ng-click="data.goChoreComplete(chore)"><strong>Chore:</strong> {{chore.choreName}}</p>
                 <p ng-click="data.goChoreComplete(chore)"><strong>Notes:</strong> {{chore.choreNotes}}</p>
                 <p ng-click="data.goChoreComplete(chore)"><strong>Points:</strong> {{chore.chorePoints}}</p>
@@ -29,5 +29,7 @@
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
           <button footer button button-clear class="footerReward" ng-click="data.rewardsToChores()"><a href="#/child/{{data.id}}/rewards" target="_self">Rewards</a></button>
           <a href="#/child/{{data.id}}/rewards" target="_self"><i class="iconSize icon ion-trophy"></i></a>
+          <button footer button button-clear class="footerReward"><a href="#/child/{{data.id}}/bank" target="_self">Bank</a></button>
+          <a href="#/child/{{data.id}}/bank" target="_self"><i class="iconSize icon ion-social-usd-outline"></i></a>
         </div>
 </ion-view>
