--- a/www/templates/children/childRewards.html
+++ b/www/templates/children/childRewards.html
@@ -3,7 +3,7 @@
           <h2 class="childShowTitle" ng-show="data.showRewardsTitle === true">Reward List:</h2>
             <div class="choreList" ng-show="data.showRewards === true">
               <ul ng-repeat="reward in data.childRewards">
-                <li>
+                <li class="listItem">
                   <p ng-click="data.goRewardPurchase(reward)"><strong>Reward:</strong> {{reward.rewardName}}</p>
                   <p ng-click="data.goRewardPurchase(reward)"><strong>Cost:</strong> {{reward.rewardPoints}} points</p>
                   <p ng-click="data.goRewardPurchase(reward)"><strong>Status:</strong> {{reward.status}}</p>
@@ -22,9 +22,11 @@
             </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
-          <button class="choreFooterLogoutButton" ng-click="data.logout(data.user)" footer button button-clear>Logout</button>
+          <button class="rewardFooterLogoutButton" ng-click="data.logout(data.user)" footer button button-clear>Logout</button>
           <i class="iconSize icon ion-ios-close-outline" ng-click="data.logout(data.user)"></i>
           <button footer button button-clear class="footerReward"><a href="#/child/{{data.id}}/chores" target="_self">Chores</a></button>
           <a href="#/child/{{data.id}}/chores" target="_self"><i class="iconSize icon ion-clipboard"></i></a>
+          <button footer button button-clear class="footerReward"><a href="#/child/{{data.id}}/bank" target="_self">Bank</a></button>
+          <a href="#/child/{{data.id}}/bank" target="_self"><i class="iconSize icon ion-social-usd-outline"></i></a>
         </div>
 </ion-view>
