added savings/spending accounts to bank page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,7 +11,9 @@ a{
   background: linear-gradient(135deg, rgba(76,76,76,1) 0%,rgba(89,89,89,1) 12%,rgba(102,102,102,1) 25%,rgba(71,71,71,1) 39%,rgba(44,44,44,1) 50%,rgba(17,17,17,1) 60%,rgba(43,43,43,1) 76%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%,rgba(19,19,19,1) 100%);
   overflow: scroll;
 }
-
+h3{
+  color: white;
+}
 /*Specific to splash.html*/
 .splashText{
   color: white;
@@ -339,4 +341,8 @@ a{
 }
 .iconSize{
   font-size: 34px;
+}
+/*specific to childBank.html*/
+.bank{
+  color: white;
 }
