--- a/www/templates/children/childBank.html
+++ b/www/templates/children/childBank.html
@@ -1,7 +1,8 @@
 <ion-view view-title="hello">
         <ion-content class="content padding-top">
-          <h2 class="childShowTitle" ng-show="data.showChoreListTitle === true">Bank</h2>
-          <hr>
+          <img class="bankImage" src="img/Bank.png" alt="bank"/>
+          <!-- <h2 class="childShowTitle" ng-show="data.showChoreListTitle === true">Bank</h2> -->
+          <!-- <hr> -->
           <div class="bank">
             <h3>Spending Account:</h3>
             <ul>
@@ -12,6 +13,7 @@
               <li>Savings Account Balance: {{data.childSavingsPoints}} points.</li>
               <li>Days until interest accrues: {{data.childSavingsDays}} days.</li>
             </ul>
+            <button ng-click="data.transferPoints()" class="pointsTransfer" ng-show="data.showPointsTransfer === true" footer button button-clear>Transfer Points</button>
           </div>
         </ion-content>
         <div class="bar bar-footer bar-dark footerLogout">
